--- a/styles/globals.css
+++ b/styles/globals.css
@@ -158,3 +158,24 @@ input:focus, textarea:focus, select:focus{
 ::-webkit-scrollbar-thumb:hover {
     background: #fda0a0c0; /* Handle color on hover */
 }
+
+
+
+.tabs {
+  display: flex;
+  justify-content: space-around;
+  padding-bottom: 1rem;
+  border-bottom: 2px solid #e5e7eb;
+}
+
+.tab {
+  padding: 0.5rem 1rem;
+  cursor: pointer;
+  font-weight: bold;
+  color: #9ca3af; /* Gray-500 */
+}
+
+.tab.active {
+  color: #1f2937; /* Gray-900 */
+  border-bottom: 2px solid #3b82f6; /* Blue-500 */
+}
